<resources>
    <string name="app_name">Linkedin_Clone</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="network">My Network</string>
    <string name="post">Post</string>
    <string name="notification">Notifications</string>
    <string name="jobs">Jobs</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="message">Messaging</string>
    <string name="searchMessage">Search Messages</string>
    <string name="about">I am an experienced Android Application Developer with a strong background in the computer software industry. My skills include Firebase, Java, Android Development, and Project Management. I have a proven track record of delivering successful projects. Currently, I am actively seeking internship opportunities to further enhance my skills and contribute to innovative projects.</string>
    <string name="search">search</string>
    <string name="more">more</string>
    <string name="backarrow">backArrow</string>
    <string name="user">USER</string>
    <string name="hello">hello</string>
    <string name="try_free_for_1_month">Try Free for 1 Month</string>
    <string name="premium">Try Premium to see jobs where you would be a top applicant</string>
    <string name="connect">Connect</string>
    <string name="open_to">Open to</string>
    <string name="add_sec">Add section</string>
    <string name="dashboard">Your Dashboard</string>
    <string name="private_to_you">Private to you</string>
    <string name="all_star">All-Star</string>
    <string name="zero">0</string>
    <string name="who_viewed">Who viewed your profile</string>
    <string name="post_view">Post views</string>
    <string name="search_app">Search appearances</string>
    <string name="creator_mode">Creator mode:</string>
    <string name="off">Off</string>
    <string name="creator">Creator mode highlights content on your profile and helps you to get discovered by potential followers</string>
    <string name="aboutt">About</string>
    <string name="experience">Experience</string>
    <string name="contact">Contact</string>
    <string name="accomplishments">Accomplishments</string>
    <string name="education">Education</string>
    <string name="my_network">My network</string>
    <string name="share_post">Share Post</string>
    <string name="talk_about">What do you want to talk about?</string>
    <string name="add_hashtag"># Add hashtag</string>
    <string name="fg_password">Forgot Password</string>
    <string name="access_and_manage_your_connections_and_interests_you_re_following">Access and manage your connections and interests you\'re following</string>
</resources>