<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Message.MessageActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginEnd="10dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/arrow_back"
                    android:contentDescription="@string/backarrow" />
                
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@id/button_back"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/message"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <ImageView
                    android:id="@+id/more"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/more_vertical"
                    android:contentDescription="@string/more" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/appbar"
        android:layout_centerHorizontal="true"
        android:background="#B2C5C1C1" />

    <RelativeLayout
        android:id="@+id/item_search_holder"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/view"
        android:background="#ffffff"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/item_card_parent"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <EditText
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:layout_toEndOf="@+id/item_search_icon"
                    android:autofillHints="name"
                    android:background="@android:color/transparent"
                    android:hint="@string/searchMessage"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="#757575"
                    android:textSize="16sp" />


                <ImageView
                    android:id="@+id/item_search_icon"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_search_black_24dp"
                    app:tint="#D7797979"
                    android:contentDescription="@string/search" />


            </RelativeLayout>


        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/item_search_holder"
        android:layout_centerHorizontal="true"
        android:background="#B2C5C1C1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view1"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:overScrollMode="never"
        tools:listitem="@layout/card_usermessage" />




</RelativeLayout>